[package]
name = "surreal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
